# project-memory-hub

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  linux-experimental.yml  release-draft.yml
config/: public-release-allowlist.toml
docs/: architecture.md  getting-started.md  operations.md  releasing.md  security.md
docs/assets/: demo-manifest.json
scripts/: audit_public_tree.py  create_checksums.py  generate_demo_assets.py  prepare_public_snapshot.py  smoke_install_artifact.py  verify_document_links.py  verify_probe_zero_write.py  verify_public_assets.py  verify_release_artifacts.py  verify_release_checkout.py  verify_wheel.py  verify_workflows.py
src/project_memory_hub/: cli.py  config.py  container.py  domain.py  paths.py  utf8.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_dashboard.py  test_demo_assets.py  test_memory_hub.py
tests/fixtures/: __init__.py
tests/integration/: test_agents_integration.py  test_automation.py  test_chatgpt_adapter.py  test_chatgpt_reconcile_coverage.py  test_cli_core.py  test_cli_display_coverage.py  test_cli_integration.py  test_cli_proposals.py  test_cli_public_beta_ux.py  test_cli_setup.py  test_codex_adapter.py  test_codex_adapter_coverage.py  test_control_automation.py  test_deferred_recovery.py  test_doctor.py  test_mcp_write_container.py  test_pending_recovery.py  test_probe_cli.py  test_probe_container.py  test_proposal_container.py  test_proposal_git.py  test_public_snapshot.py  test_recall_readonly_container.py  (+12 more)
(+160 files in other folders)
