[project]
name = "project-memory-hub"
version = "0.2.1"
description = "Local-first, model-isolated project memory for AI-assisted development."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Project Memory Hub Contributors" },
]
keywords = [
  "ai",
  "codex",
  "developer-tools",
  "local-first",
  "project-memory",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "platformdirs>=4,<5",
  "pydantic>=2.8,<3",
  "python-multipart>=0.0.9,<1",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "mypy>=1.11,<2",
  "Pillow>=10,<13",
  "playwright>=1.48,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "PyYAML>=6,<7",
  "ruff>=0.6,<1",
  "twine>=5,<7",
]

[project.scripts]
memory-hub = "project_memory_hub.cli:app"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["project_memory_hub"]
branch = true

[tool.coverage.report]
fail_under = 85
precision = 2

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/project_memory_hub"]
